# deep-eye

./: AI_INTEGRATION_SUMMARY.md  INSTALLATION.md  MCP_QUICKSTART.md  README-MCP-UPDATE.md  README.md  requirements.txt
core/: hybrid_ai_manager.py
docs/: AI_INTEGRATION_GUIDE.md
mcp_server/: README.md  __init__.py  pyproject.toml  server.py
