[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-eye-mcp"
version = "1.0.0"
description = "Deep Eye Security Scanner - MCP Server for Claude Desktop"
authors = [{ name = "Deep Eye Team" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
deep-eye-mcp = "mcp_server.server:main"
